--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -73,6 +73,7 @@
             android:gravity="center_vertical">
 
             <TextView
+                android:id="@+id/waterStationName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -83,6 +84,7 @@
                 android:ellipsize="end"/>
 
             <Button
+                android:id="@+id/viewDetailsBtn"
                 android:layout_width="100dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
