--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -33,38 +33,14 @@
         android:layout_margin="10dp"
         android:layout_marginBottom="30dp">
 
-        <!-- Map Placeholder -->
-        <LinearLayout
-            android:layout_width="350dp"
+        <!-- MapBox MapView -->
+        <com.mapbox.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:layout_weight="1"
-            android:background="@drawable/maps_placeholder_bg"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="20dp">
+            android:layout_weight="1" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Map View"
-                android:textColor="@color/somewhat_blue"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Maps API will be integrated soon"
-                android:textAlignment="center"
-                android:textColor="#666666"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <!-- Water Station Details - Fixed for horizontal scrolling -->
-        <!-- Water Station Details - With text wrapping -->
+        <!-- Water Station Details -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Water Station Name"
+                android:text="Living Water Refilling Station"
                 android:textColor="@color/another_yellow"
                 android:textSize="18sp"
                 android:maxLines="2"
